Small responsiveness changes

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REACT_APP_FIREBASE_API_KEY = "DUMMY TEXT"
-REACT_APP_FIREBASE_AUTH_DOMAIN = "DUMMY TEXT"
-REACT_APP_FIREBASE_PROJECT_ID = "DUMMY TEXT"
-REACT_APP_FIREBASE_STORAGE_BUCKET = "DUMMY TEXT"
-REACT_APP_FIREBASE_MESSAGE_SENDER_ID = "DUMMY TEXT"
-REACT_APP_FIREBASE_APP_ID = "DUMMY TEXT"
-REACT_APP_FIREBASE_MEASUREMENT_ID = "DUMMY TEXT"
+REACT_APP_FIREBASE_API_KEY = "AIzaSyAP4-KIdHHBH7zRCiocNdj60c1MovkCKnY"
+REACT_APP_FIREBASE_AUTH_DOMAIN = "mammimia-twitter-clone.firebaseapp.com"
+REACT_APP_FIREBASE_PROJECT_ID = "mammimia-twitter-clone"
+REACT_APP_FIREBASE_STORAGE_BUCKET = "mammimia-twitter-clone.appspot.com"
+REACT_APP_FIREBASE_MESSAGE_SENDER_ID = "12400714344"
+REACT_APP_FIREBASE_APP_ID = "1:12400714344:web:3194327ba89d35657e11dd"
+REACT_APP_FIREBASE_MEASUREMENT_ID = "G-39LTTBJHR7"
